k8s/network_polices/policy.yml
apiVersion: networking.k8s.io/v1 
kind: NetworkPolicy
metadata: 
  name: nginx-policy
spec:
  podSelector:
    matchLabels:
      app: nginx 
  policyTypes:
    - "Ingress"
    - "Egress"
  ingress:
    - from:
      - ipBlock:
          cidr: 172.17.0.0/16
          except:
            - "172.17.0.120"
      - podSelector:
          matchLabels:
            app: ubuntu
        namespaceSelector:
          matchLabels:
            ns: nginx
      ports:
        - port: 80
          protocol: TCP   
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: ubuntu
        namespaceSelector:
          matchLabels:
            ns: nginx
      ports:
        - port: 80
          protocol: TCP          

#Só vai permitir comunicação com pods quer tenham a label app=ubuntu
